# DCtrl_ESP32C3

./: .gitignore  CMakeLists.txt  README.md  partitions_ota_4mb.csv  partitions_single_4mb.csv  sdkconfig  sdkconfig.defaults  sdkconfig.esp32c3  sdkconfig.esp32c3.old
components/board/: CMakeLists.txt  board_profile.c
components/chassis/: CMakeLists.txt  chassis_uart.c
components/control/: CMakeLists.txt  line_interpreter.c  line_trace_controller.c  line_trace_policy.c  motion_contracts.c  motion_executor.c  motion_inputs.c  motion_policy.c
components/control/include/: control_plan.h  line_interpreter.h  line_trace_controller.h  line_trace_policy.h  motion_contracts.h  motion_executor.h  motion_inputs.h  motion_policy.h
components/debug_protocol/: CMakeLists.txt  debug_protocol.c
components/debug_server/: CMakeLists.txt  debug_server_ble.c  debug_server_wifi.c
components/line_sensor/: CMakeLists.txt  line_sensor_uart.c
components/param_store/: CMakeLists.txt  param_store.c
components/telemetry/: CMakeLists.txt  telemetry.c
components/vehicle_state/: CMakeLists.txt  (+1 more)
docs/: developer-guide.md  hardware-framework-checklist.html  index.html  line-following-pid-speed-state.html  strategy-register.html  system-guide.html  vehicle-feature-mode-maintenance.md  vehicle-line-state-machine.html
main/: CMakeLists.txt  app_main.c
references/: module-contracts.md  wifi-debug-research-20260603.md
scripts/: idf.sh
tools/: README.md  ble_debug_tester.swift  ble_remote_tester.swift  check_feature_boundaries.py  ota_upload.py  state_machine_tester.py
(+14 files in other folders)
